--- a/config/config.yml
+++ b/config/config.yml
@@ -1,20 +1,15 @@
 # Server Information
 server:
-  ip: 'ZUCHINIsmp.aternos.me' # Server IP
-  port: 27156 # Server port
+  ip: # Server IP
+  port: # Server port
   version: # Server version (keep empty to use supported version)
 
 # Victims username
 players:
-  - 'luizn2010'
-  - 'Wackin'
-  - 'beebow'
-  - 'GhexterCortes'
-  - 'AlphaMegaKing'
 
 # Other Settings
 connect-interval: 3000 # Connection interval to prevent "Connection throttled!"
 output-file: coordinates.yml # Output file
 
 # Version
-version: 0.1 # Config version (Don't modify)
+version: 1.0 # Config version (Don't modify)
