--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "node index.js",
-    "test": "node index.js"
+    "test": "node test.js"
   },
   "dependencies": {
     "mineflayer": "^3.11.0",
