--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
 github: []
-issuehunt: FalloutStudios/Grigora
+issuehunt: FalloutStudios
 ko_fi: FalloutStudios
