--- a/config/config.yml
+++ b/config/config.yml
@@ -1,11 +1,11 @@
 # Server Information
 server:
-  ip: play.ourmcworld.ml # Server IP
-  port: 25565 # Server port
+  ip: # Server IP
+  port: # Server port
   version: # Server version (keep empty to use supported version)
 
 # Victims username
-players: [Grigora1, Grigora2, Grigora3]
+players: []
 
 # Other Settings
 connect-interval: 5000 # Connection interval to prevent "Connection throttled!"
